# M-M-Plugin

MasterSuite/: CMakeLists.txt  README.md  README.txt
MasterSuite/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
MasterSuite/github/workflows/: build-and-package-windows.yml
MasterSuite/installer/: MasterSuiteInstaller.nsi
